changements mineurrs routes

--- a/src/AdminBundle/Resources/views/Default/articles.html.twig
+++ b/src/AdminBundle/Resources/views/Default/articles.html.twig
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="row">
-                <a href="createArticle"><button class="button-articles">Créer article</button></a>
+                <a href="{{ path('create_article') }}"><button class="button-articles">Créer article</button></a>
             </div>
         </div>
 {% endblock %}
