--- a/src/AdminBundle/Resources/views/Default/template.html.twig
+++ b/src/AdminBundle/Resources/views/Default/template.html.twig
@@ -39,8 +39,8 @@
                         <line id="XMLID2" class="st1" x1="30.8" y1="34.2" x2="45" y2="45"/>
                     </svg>
                 </a>
-                <a class="lienText" href="{{ path('adminHome') }}"><h3>Accueil</h3></a>
-                <a class="lienText" href="{{ path('adminArticles') }}"><h3>Articles</h3></a>
+                <a class="lienText" href="{{ path('admin_home') }}"><h3>Accueil</h3></a>
+                <a class="lienText" href="{{ path('admin_articles') }}"><h3>Articles</h3></a>
                 <a class="lienText" href="#"><h3>Quiz</h3></a>
             </nav>
 
