Modification page admin articles

--- a/src/AdminBundle/Resources/views/Default/articles.html.twig
+++ b/src/AdminBundle/Resources/views/Default/articles.html.twig
@@ -1,10 +1,6 @@
 {% extends "AdminBundle:Default:template.html.twig" %}
 {% block content %}
-            <div class="row">
-                <button class="button-articles" id="modify">Modifier article</button>
-            </div>
-            <br>
-            <div class="card mb-3" id="liste_articles">
+            <div class="card mb-3">
                 <div class="card-header">
                     <i class="fa fa-table"></i> Liste articles</div>
                 <div class="card-body">
