--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="{{ path('blog') }}">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('quiz') }}">Quizz</a>
+                        <a class="nav-link" href="{{ path('quiz') }}">Quiz</a>
                     </li>
                 </ul>
 
