TimeLine Twitter en français

--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -50,7 +50,7 @@
             <div class="col-lg-1">
             </div>
             <div class="col-lg-5 droite">
-                <a class="twitter-timeline"  href="https://twitter.com/search?q=%20%23GreenIT" data-widget-id="923817749377363968">#GreenIT</a>
+                <a class="twitter-timeline"  href="https://twitter.com/search?q=%20%23GreenIT" data-widget-id="923817749377363968" data-lang="fr">#GreenIT</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
         </div>
