--- a/web/css/register.css
+++ b/web/css/register.css
@@ -8,12 +8,6 @@
     border-top: solid 3px;
     border-bottom: solid 3px;
     border-color:forestgreen;
-    border-bottom-right-radius: 10%;
-    border-bottom-left-radius: 10%;
-    border-top-right-radius: 10%;
-    border-top-left-radius: 10%;
+    background-color: rgba(255,255,255,0.6);
+
 }
-
-
-
-
