Ajout création d'un article

--- a/src/AdminBundle/Resources/views/Default/articles.html.twig
+++ b/src/AdminBundle/Resources/views/Default/articles.html.twig
@@ -1,6 +1,6 @@
 {% extends "AdminBundle:Default:template.html.twig" %}
 {% block content %}
-            <div class="card mb-3">
+            <div class="card mb-3 row">
                 <div class="card-header">
                     <i class="fa fa-table"></i> Liste articles</div>
                 <div class="card-body">
@@ -40,5 +40,4 @@
             <div class="row">
                 <a href="{{ path('create_article') }}"><button class="button-articles">Créer article</button></a>
             </div>
-        </div>
 {% endblock %}
