--- a/src/AdminBundle/Resources/views/Default/article.html.twig
+++ b/src/AdminBundle/Resources/views/Default/article.html.twig
@@ -1,7 +1,70 @@
 {% extends "AdminBundle:Default:template.html.twig" %}
 {% block content %}
-    {{ form_start(form, {'method': 'post'})}}
-    {{ form_widget(form) }}
+    {{ form_start(form,{'method': 'post'}, {'attr': {'class': 'form-inline'}}) }}
+
+    <div class="form-group">
+        {{ form_label(form.dateCreation,null,
+        { 'label_attr': {'class': 'control-label col-sm-2'} }
+        ) }}
+        <div class="col-sm-10">
+            {{ form_widget(form.dateCreation) }}
+        </div>
+    </div>
+    <div class="form-group">
+        {{ form_label(form.title,null,
+        { 'label_attr': {'class': 'control-label col-sm-2'} }
+        ) }}
+        <div class="col-sm-10">
+            {{ form_widget(form.title,
+            {  'attr' : { 'class' : 'form-control'}}
+            ) }}
+        </div>
+    </div>
+    <div class="form-group">
+        {{ form_label(form.description,null,
+        { 'label_attr': {'class': 'control-label col-sm-2'} }
+        ) }}
+        <div class="col-sm-10">
+            {{ form_widget(form.description,
+            {  'attr' : { 'class' : 'form-control form-control-lg'}}
+            ) }}
+        </div>
+    </div>
+    <div class="form-group">
+        {{ form_label(form.detail,null,
+        { 'label_attr': {'class': 'control-label col-sm-2'} }
+        ) }}
+        <div class="col-sm-10">
+            {{ form_widget(form.detail,
+            {  'attr' : { 'class' : 'form-control form-control-lg'}}
+            ) }}
+        </div>
+    </div>
+    <div class="form-group">
+        {{ form_label(form.image,null,
+        { 'label_attr': {'class': 'control-label col-sm-2'} }
+        ) }}
+        <div class="col-sm-10">
+            {{ form_widget(form.image,
+            {  'attr' : { 'class' : 'form-control form-control-lg col-sm-2'} }
+            ) }}
+        </div>
+    </div>
+    <div class="form-check">
+        {{ form_label(form.visible,null,
+        { 'label_attr': {'class': 'form-check-label'} }
+        ) }}
+        {{ form_widget(form.visible,
+        {  'attr' : { 'class' : 'form-check-input'}}
+        ) }}
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            {{ form_label(form.save,null) }}
+            {{ form_widget(form.save) }}
+        </div>
+    </div>
+
     {{ form_end(form) }}
 {% endblock %}
 
