--- a/src/AdminBundle/Resources/views/Default/article.html.twig
+++ b/src/AdminBundle/Resources/views/Default/article.html.twig
@@ -1,65 +1,64 @@
 {% extends "AdminBundle:Default:template.html.twig" %}
 {% block content %}
-    {{ form_start(form,{'method': 'post'}, {'attr': {'class': 'form-inline'}}) }}
+    {{ form_start(form,{'method': 'post'}, {'attr': {'class': 'form-horizontal'}}) }}
 
     <div class="form-group">
         {{ form_label(form.dateCreation,null,
-            { 'label_attr': {'class': 'control-label col-sm-2'} }
+        { 'label_attr': {'class': 'control-label col-sm-4'} }
         ) }}
-        <div class="col-sm-10">
+        <div class="col-sm-6">
             {{ form_widget(form.dateCreation) }}
         </div>
     </div>
     <div class="form-group">
         {{ form_label(form.title,null,
-            { 'label_attr': {'class': 'control-label col-sm-2'} }
+        { 'label_attr': {'class': 'control-label col-sm-4'} }
         ) }}
-        <div class="col-sm-10">
+        <div class="col-sm-6">
             {{ form_widget(form.title,
-                {  'attr' : { 'class' : 'form-control'}}
+            {  'attr' : { 'class' : 'form-control'}}
             ) }}
         </div>
     </div>
     <div class="form-group">
         {{ form_label(form.description,null,
-            { 'label_attr': {'class': 'control-label col-sm-2'} }
+        { 'label_attr': {'class': 'control-label col-sm-4'} }
         ) }}
-        <div class="col-sm-10">
+        <div class="col-sm-6">
             {{ form_widget(form.description,
-                {  'attr' : { 'class' : 'form-control form-control-lg'}}
+            {  'attr' : { 'class' : 'form-control form-control-lg'}}
             ) }}
         </div>
     </div>
     <div class="form-group">
         {{ form_label(form.detail,null,
-            { 'label_attr': {'class': 'control-label col-sm-2'} }
+        { 'label_attr': {'class': 'control-label col-sm-4'} }
         ) }}
-        <div class="col-sm-10">
+        <div class="col-sm-6">
             {{ form_widget(form.detail,
-                {  'attr' : { 'class' : 'form-control form-control-lg'}}
+            {  'attr' : { 'class' : 'form-control form-control-lg'}}
             ) }}
         </div>
     </div>
     <div class="form-group">
         {{ form_label(form.image,null,
-            { 'label_attr': {'class': 'control-label col-sm-2'} }
+        { 'label_attr': {'class': 'control-label col-sm-4'} }
         ) }}
-        <div class="col-sm-10">
+        <div class="col-sm-6">
             {{ form_widget(form.image,
-                {  'attr' : { 'class' : 'form-control form-control-lg col-sm-2'} }
+            {  'attr' : { 'class' : 'form-control-file'} }
             ) }}
         </div>
     </div>
     <div class="form-check">
-        {{ form_label(form.visible,null,
-            { 'label_attr': {'class': 'form-check-label'} }
-        ) }}
-        {{ form_widget(form.visible,
-            {  'attr' : { 'class' : 'form-check-input'}}
-        ) }}
+        <label class="form-check-label col-lg-12">Visible
+            {{ form_widget(form.visible,
+            {  'attr' : { 'class' : 'form-check-input col-lg-1 col-md-1 col-sm-1 col-xs-1'} }
+            ) }}
+        </label>
     </div>
     <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
+        <div class="col-sm-offset-4 col-sm-6">
             {{ form_label(form.save,null) }}
             {{ form_widget(form.save) }}
         </div>
@@ -67,5 +66,3 @@
 
     {{ form_end(form) }}
 {% endblock %}
-
-
