--- a/src/AdminBundle/Resources/views/Default/articles.html.twig
+++ b/src/AdminBundle/Resources/views/Default/articles.html.twig
@@ -2,7 +2,7 @@
 {% block content %}
             <div class="card mb-3 row">
                 <div class="card-header">
-                    <i class="fa fa-table"></i> Liste articles</div>
+                    <i class="fa fa-table"></i> Liste des articles</div>
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
