Modification modification article

--- a/src/AdminBundle/Resources/views/Default/article.html.twig
+++ b/src/AdminBundle/Resources/views/Default/article.html.twig
@@ -46,7 +46,7 @@
         ) }}
         <div class="col-sm-6">
             {{ form_widget(form.image,
-            {  'attr' : { 'class' : 'form-control-file'} }
+            {  'attr' : { 'class' : 'form-control'} }
             ) }}
         </div>
     </div>
