--- a/src/FrontBundle/Resources/views/Default/blog.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blog.html.twig
@@ -2,15 +2,66 @@
 
 {% block body %}
 {% block connected_content %}
+    <div class ="container">
+        <form method="post">
+            <div class="row">
+                <div class="col-lg-3">
+                <div class="form-group">
+
+                    {{ form_label(form.Recherhce)}}
+                    {{ form_widget(form.Recherhce,
+                    {  'attr' : { 'class' : 'form-control'}}
+                    ) }}
+                </div>
+                    <div class="form-group">
+                        {{ form_widget(form.filtrer,
+                        {  'attr' : { 'class' : 'btn btn-primary filter'}}
+                        ) }}
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="row">
+
+                            <div class="form-group">
+                                {{ form_label(form.trie_par)}}
+                                {{ form_widget(form.trie_par,
+                                {  'attr' : { 'class' : 'form-control'}}
+                                ) }}
+
+                        </div>
+                        <div class="col-lg-3 col-lg-offset-12">
+                            <div class="form-group">
+                                <button type="submit" id="form_Croissant" name="form[Croissant]" class="btn btn-primary up">
+                                    <svg fill="#FFFFFF" height="50" viewBox="0 0 24 24" width="50" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
+                                        <path d="M0 0h24v24H0z" fill="none"/>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" id="form_Decroissant" name="form[Decroissant]" class="btn btn-primary down">
+                                    <svg fill="#FFFFFF" height="50" viewBox="0 0 24 24" width="50" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+                                        <path d="M0-.75h24v24H0z" fill="none"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
    {% if articles %}
         <section id="cd-timeline" class="cd-container">
            {% for article in articles %}
 
                <div  class="cd-timeline-block">
-                   <a href="article/id={{ article.id }}" style="text-decoration: none;">
+
                        <div class="cd-timeline-img cd-picture">
                        </div> <!-- cd-timeline-img -->
-
+                   <a href="article/id={{ article.id }}" style="text-decoration: none;">
                        <div  class="cd-timeline-content">
                            <div class="row">
                                <h1>{{ article.title }}</h1>
