--- a/web/css_TemplateBase/main.css
+++ b/web/css_TemplateBase/main.css
@@ -36,6 +36,7 @@ body{
     background-color: white;
     background-repeat:no-repeat;
     background-attachment:fixed;
+    font-family:"Open Sans", sans-serif!important;
 }
 
 .navbar-toggler, .navbar-toggler collapsed{
