correction css article +ajout bouton voir le site dans admin

--- a/web/css/article.css
+++ b/web/css/article.css
@@ -52,3 +52,9 @@ body{
 #btn:hover {
     background-color: #5ed75e;
 }
+
+@media screen and (max-width: 1500px) {
+    body{
+        background-image: none!important;
+    }
+}
