--- a/src/AdminBundle/Resources/views/Default/template.html.twig
+++ b/src/AdminBundle/Resources/views/Default/template.html.twig
@@ -28,9 +28,9 @@
                         <path d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"/>
                     </svg>
                 </a>
-                <a class="svgIcon" href="#">
+                <a class="svgIcon"  href="#">
                     <svg  height="48" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                         viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+                          viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
                         <style type="text/css">
                             .st0{fill:none;stroke:#FFFFFF;stroke-width:7;stroke-miterlimit:10;}
                             .st1{fill:none;stroke:#FFFFFF;stroke-width:7;stroke-miterlimit:10;}
@@ -39,9 +39,13 @@
                         <line id="XMLID2" class="st1" x1="30.8" y1="34.2" x2="45" y2="45"/>
                     </svg>
                 </a>
+                <a class="svgIcon" style="padding-right: 0px;" href="#">
+                    <img height="48" width="auto" style="margin-left: 15px!important;" src="{{ asset('logo.png') }}" alt="La Toile Verte" >
+                </a>
                 <a class="lienText" href="{{ path('admin_home') }}"><h3>Accueil</h3></a>
                 <a class="lienText" href="{{ path('admin_articles') }}"><h3>Articles</h3></a>
                 <a class="lienText" href="#"><h3>Quiz</h3></a>
+                <a class="lienText" href="{{ path('accueil') }}"><h3>Voir le Site</h3></a>
             </nav>
 
         </header>
