correction couleur css time line et blog

--- a/src/FrontBundle/Resources/views/Default/blog.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blog.html.twig
@@ -61,7 +61,7 @@
 
                        <div class="cd-timeline-img cd-picture">
                        </div> <!-- cd-timeline-img -->
-                   <a href="article/id={{ article.id }}" style="text-decoration: none;">
+                   <a class="Asurvol" href="article/id={{ article.id }}" style="text-decoration: none;">
                        <div  class="cd-timeline-content">
                            <div class="row">
                                <h1>{{ article.title }}</h1>
