--- a/web/css/timeline/css/style.css
+++ b/web/css/timeline/css/style.css
@@ -23,16 +23,6 @@ html * {
 h3{
   color:white;
 }
-a {
-  color: #acb7c0;
-  text-decoration: none!important;
-  font-family: "Open Sans", sans-serif;
-}
-a :hover
-{
-  text-decoration:none;
-
-}
 
 img {
   max-width: 100%;
@@ -59,12 +49,7 @@ h1
   transition: background 0.5s;
   box-shadow: 0px 5px 0px 0px forestgreen;
 }
-.marketing:hover
-{
-opacity: 0.8;
-  transition: background 0.2s;
-  text-decoration-line: none;
-}
+
 /* -------------------------------- 
 
 Modules - reusable parts of our design
@@ -270,7 +255,14 @@ Main components
 {
   background-color: rgba(34,139,34,0.5);
   transition: background 0.2s;
-  text-decoration: none;
+  text-decoration: none!important;
+}
+.Asurvol:hover
+{
+  background-color: rgba(34,139,34,0.5);
+  transition: background 0.2s;
+  text-decoration: none!important;
+  color: black!important;
 }
 
 
