créer question quiz

--- a/src/AdminBundle/Resources/views/Default/quiz.html.twig
+++ b/src/AdminBundle/Resources/views/Default/quiz.html.twig
@@ -30,6 +30,7 @@
                 </div>
             </div>
             <div class="row">
-                <a href="{{ path('create_quiz') }}"><button class="button-articles">Créer quiz</button></a>
+                <a href="{{ path('create_quiz') }}"><button>Créer quiz</button></a>
+                <a href="{{ path('create_question') }}"><button>Créer question</button></a>
             </div>
 {% endblock %}
