--- a/src/AdminBundle/Resources/views/Default/article.html.twig
+++ b/src/AdminBundle/Resources/views/Default/article.html.twig
@@ -63,6 +63,12 @@
             {{ form_widget(form.save) }}
         </div>
     </div>
+    <div class="form-group">
+        <div class="col-sm-offset-4 col-sm-6">
+            {{ form_label(form.suppr,null) }}
+            {{ form_widget(form.suppr) }}
+        </div>
+    </div>
 
     {{ form_end(form) }}
 {% endblock %}
