--- a/src/AdminBundle/Resources/views/Default/template.html.twig
+++ b/src/AdminBundle/Resources/views/Default/template.html.twig
@@ -6,6 +6,7 @@
     {% block stylesheets %}
 
     {% endblock %}
+    <link href="https://canvasjs.com/assets/css/jquery-ui.1.11.2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{{ asset('css_admin/admin.css') }}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
