--- a/src/AdminBundle/Resources/views/Default/articles.html.twig
+++ b/src/AdminBundle/Resources/views/Default/articles.html.twig
@@ -29,7 +29,7 @@
                                     <td>{{ article.detail }}</td>
                                     <td>{{ article.image }}</td>
                                     <td>{{ article.visible }}</td>
-                                    <td><a href="adminArticle/id={{ article.id }}"><button>Modifier</button></a></td>
+                                    <td><a href="articles/id={{ article.id }}"><button>Modifier</button></a></td>
                                 </tr>
                             {% endfor %}
                             </tbody>
