--- a/src/AdminBundle/Resources/views/Default/quiz.html.twig
+++ b/src/AdminBundle/Resources/views/Default/quiz.html.twig
@@ -21,7 +21,7 @@
                                     <td>{{ quiz.id }}</td>
                                     <td>{{ quiz.label }}</td>
                                     <td>{{ quiz.description }}</td>
-                                    <td><a href="adminQuiz/id={{ quiz.id }}"><button>Modifier</button></a></td>
+                                    <td><a href="quiz/id={{ quiz.id }}"><button>Modifier</button></a></td>
                                 </tr>
                             {% endfor %}
                             </tbody>
