Modification texte home

--- a/src/FrontBundle/Resources/views/Default/home.html.twig
+++ b/src/FrontBundle/Resources/views/Default/home.html.twig
@@ -8,14 +8,14 @@
             <a href="{{ path('fos_user_security_login') }}" class="col-lg-5 rr rr-left" style="text-decoration: none;">
                     <div>
                         <h2>Se connecter</h2>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                        <p>Connectez vous et testez vos connaissances</p>
                     </div>
             </a>
 
             <a href="{{ path('fos_user_registration_register') }}" class="col-lg-4 rr rr-right" style="text-decoration: none;">
                     <div>
                         <h2>S'inscrire</h2>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                        <p>Inscrivez vous pour accéder à toutes les fonctionnalités</p>
                     </div>
             </a>
         </div>
