Ajout du timer pour le quiz et génération de la certification

--- a/app/Resources/views/default.htm.twig
+++ b/app/Resources/views/default.htm.twig
@@ -1,4 +1,4 @@
-﻿<section class="quiz" data-title="{{ quiz.label }}" data-subtitle="{{ quiz.description }}">
+﻿<section class="quiz" data-title="{{ quiz.label }}" data-subtitle="{{ quiz.description }}" data-certified="{{ quiz.certified }}">
     {% for question in questions %}
     <section class="question">
         <section class="text">
