--- a/src/AdminBundle/Resources/views/Default/createQuiz.html.twig
+++ b/src/AdminBundle/Resources/views/Default/createQuiz.html.twig
@@ -22,6 +22,10 @@
         </div>
     </div>
     <div class="form-group">
+        {{ form_label(form.certified) }}
+        {{ form_widget(form.certified) }}
+    </div>
+    <div class="form-group">
         <div class="col-sm-offset-4 col-sm-6">
             {{ form_label(form.save,null) }}
             {{ form_widget(form.save) }}
