--- a/src/FrontBundle/Resources/views/Default/quizSession.html.twig
+++ b/src/FrontBundle/Resources/views/Default/quizSession.html.twig
@@ -38,32 +38,34 @@
             <div id="accordion" role="tablist" style="overflow-y: auto;height:60vh;padding-right:15px;">
                 <div class="row">
 
-                        {% for session in quiz_sessions %}
+                    {% for session in quiz_sessions %}
+                    {% if not session.over %}
                     <div class="col-lg-12">
-                            <div class="card">
-                                <div class="card-header list-group-item-action d-flex w-100 justify-content-between" role="tab" id="heading{{ session.code }}" data-toggle="collapse" href="#collapse{{ session.code }}" aria-expanded="false" aria-controls="collapse{{ session.code }}">
-                                    <h5 class="mb-0">{{ session.quiz.label }}</h5>
-                                    <span class="badge badge-info"># {{ session.code }}</span>
-                                </div>
-                                <div class="card-body">
-                                    <small class="card-text text-muted">Début : {{ session.beginDate|date("d/m/Y H:i", session.timezone) }}</small><br/>
-                                    <small class="card-text text-muted">Fin : {{ session.endDate|date("d/m/Y H:i", session.timezone) }}</small>
-                                </div>
-                                <div id="collapse{{ session.code }}" class="collapse" role="tabpanel" aria-labelledby="heading{{ session.code }}" data-parent="#accordion">
-                                    <div class="card-footer">
-                                        <form action="quiz/handleQuizSessionsAction" name="form" method="post" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                                            <div class="btn-group mr-2" role="group" aria-label="First group">
-                                                <button type="submit" name="edit" class="btn btn-primary">Éditer</button>
-                                                <input type="hidden" name="code" value="{{ session.code }}"\>
-                                                <button type="submit" name="delete" class="btn btn-danger">Supprimer</button>
-                                            </div>
-                                        </form>
-                                    </div>
+                        <div class="card">
+                            <div class="card-header list-group-item-action d-flex w-100 justify-content-between" role="tab" id="heading{{ session.code }}" data-toggle="collapse" href="#collapse{{ session.code }}" aria-expanded="false" aria-controls="collapse{{ session.code }}">
+                                <h5 class="mb-0">{{ session.quiz.label }}</h5>
+                                <span class="badge badge-info"># {{ session.code }}</span>
+                            </div>
+                            <div class="card-body">
+                                <small class="card-text text-muted">Début : {{ session.beginDate|date("d/m/Y H:i", session.timezone) }}</small><br/>
+                                <small class="card-text text-muted">Fin : {{ session.endDate|date("d/m/Y H:i", session.timezone) }}</small>
+                            </div>
+                            <div id="collapse{{ session.code }}" class="collapse" role="tabpanel" aria-labelledby="heading{{ session.code }}" data-parent="#accordion">
+                                <div class="card-footer">
+                                    <form action="quiz/handleQuizSessionsAction" name="form" method="post" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                                        <div class="btn-group mr-2" role="group" aria-label="First group">
+                                            <button type="submit" name="edit" class="btn btn-primary">Éditer</button>
+                                            <input type="hidden" name="code" value="{{ session.code }}"\>
+                                            <button type="submit" name="delete" class="btn btn-danger">Fermer</button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
-                            <br/>
+                        </div>
+                        <br/>
                     </div>
-                        {% endfor %}
+                    {% endif %}
+                    {% endfor %}
 
                 </div>
             </div>
